<?xml version="1.0" encoding="utf-8"?><!--
  French Revolutionary Calendar Android Wear Complications
  Copyright (C) 2017 - Present, Carmen Alvarez

  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 3
  of the License, or (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program; if not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="app_name">Revolutionary Calendar</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="complication_weekday">Weekday</string>
    <string name="complication_date">Date</string>
    <string name="complication_time">Decimal time</string>
    <string name="complication_object_of_the_day">Today\'s object</string>
    <string name="setting_method">Calculation method</string>
    <string name="setting_method_summary">How the first day of each year is determined: %s</string>
    <string name="setting_roman_numeral">Roman numeral year</string>
    <string name="setting_language">Language</string>
    <string name="setting_language_summary" translatable="false">%s</string>
    <string name="setting_key_language" translatable="false">setting_language</string>
    <string name="setting_key_method" translatable="false">setting_method</string>
    <string name="setting_key_roman_numeral" translatable="false">setting_roman_numeral</string>
    <string name="setting_default_language" translatable="false">fr</string>
    <string name="about_copyright" translatable="false">Copyright © 2017 - Present, Carmen Alvarez</string>
    <string name="about_license">License: GNU GPLv3</string>
    <string name="about_source">Source code</string>
    <string name="about_wiki">About the calendar</string>
    <string name="about_credits">Credits:</string>
    <string name="about_credits_equinox_tool">AstroLib C++ program by Mark Huss, to determine the first day of autumn in each year</string>
    <string name="about_credits_roman_numeral_algorithm">Fraser Chapman for the Roman numeral algorithm</string>
    <string name="about_link_license" translatable="false">https://github.com/caarmen/FRCComplication/blob/master/LICENSE.md</string>
    <string name="about_link_source" translatable="false">https://github.com/caarmen/FRCComplication</string>
    <string name="about_link_wiki">https://en.wikipedia.org/wiki/French_Republican_Calendar</string>
    <string name="about_credits_link_equinox_tool" translatable="false">http://mhuss.com/AstroLib/</string>
    <string name="about_credits_link_roman_numeral_algorithm" translatable="false">https://goo.gl/xw65ng</string>
    <string name="about_link_opened_on_phone">Opened on phone</string>

    <string-array name="setting_method_labels">
        <item>Romme</item>
        <item>Equinox</item>
        <item>von Mädler</item>
    </string-array>
    <string-array name="setting_method_values" translatable="false">
        <item>1</item>
        <item>0</item>
        <item>2</item>
    </string-array>
    <string-array name="setting_language_labels" translatable="false">
        <item>Français</item>
        <item>Català</item>
        <item>Deutsch</item>
        <item>English (day of year only)</item>
        <item>Español</item>
        <item>Italiano</item>
    </string-array>
    <string-array name="setting_language_values" translatable="false">
        <item>fr</item>
        <item>ca</item>
        <item>de</item>
        <item>en</item>
        <item>es</item>
        <item>it</item>
    </string-array>
</resources>
