<?xml version="1.0" encoding="utf-8"?><!--
  French Revolutionary Calendar Android Wear Complications
  Copyright (C) 2017 Carmen Alvarez

  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 3
  of the License, or (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program; if not, see <http://www.gnu.org/licenses/>.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.wearable.view.BoxInsetLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ca.rmen.android.frc.complications.AboutActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_box="left|right">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="36dp"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/versionName"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/about_copyright"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/about_license"
                    style="@style/about_link_text"
                    app:link="@{@string/about_link_license}"
                    android:text="@string/about_license" />

                <TextView
                    android:id="@+id/about_source"
                    style="@style/about_link_text"
                    app:link="@{@string/about_link_source}"
                    android:text="@string/about_source" />

                <TextView
                    android:id="@+id/about_wiki"
                    style="@style/about_link_text"
                    app:link="@{@string/about_link_wiki}"
                    android:text="@string/about_wiki" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/about_credits"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/about_credits_equinox_tool"
                    style="@style/about_link_text"
                    app:link="@{@string/about_credits_link_equinox_tool}"
                    android:text="@string/about_credits_equinox_tool" />

                <TextView
                    android:id="@+id/about_credits_roman_numeral_algorithm"
                    style="@style/about_link_text"
                    android:layout_marginBottom="36dp"
                    app:link="@{@string/about_credits_link_roman_numeral_algorithm}"
                    android:text="@string/about_credits_roman_numeral_algorithm" />
            </LinearLayout>
        </ScrollView>

    </android.support.wearable.view.BoxInsetLayout>
</layout>
